<resources>
    <string name="splash">Splash</string>
    <string name="form_title">Perfil</string>
    <string name="app_name">Formulario FI</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="n_mero_de_cuenta">Número de cuenta</string>
    <string name="siguiente">Siguiente</string>
    <string name="carreras">Carreras</string>
    <string name="formulario">Formulario</string>
    <string name="completarFormulario">Por favor complete el formulario.</string>
    <string name="campoCuenta">Revisa el campo cuenta</string>
    <string name="campoCarrera">Especifica la carrera</string>
    <string name="carrera">Carrera</string>
    <string name="campoFecha">Revisa tu fecha de nacimiento</string>
    <string name="nombreCompleto">%1$s %2$s</string>
    <plurals name="yearsOld">
        <item  quantity="one">Edad: %d año</item>
        <item  quantity="other">Edad: %d años</item>
    </plurals>
    <string name="imagen_carrera">imagen carrera</string>
    <string name="Acuario">Acuario</string>
    <string name="Capricornio">Capricornio</string>
    <string name="Piscis">Piscis</string>
    <string name="Aries">Aries</string>
    <string name="Tauro">Tauro</string>
    <string name="Geminis">Géminis</string>
    <string name="Cancer">Cáncer</string>
    <string name="Leo">Leo</string>
    <string name="Virgo">Virgo</string>
    <string name="Libra">Libra</string>
    <string name="Escorpio">Escorpio</string>
    <string name="Sagitario">Sagitario</string>
    <string name="Mono">Mono</string>
    <string name="Pollo">Pollo</string>
    <string name="Cerdo">Cerdo</string>
    <string name="Perro">Perro</string>
    <string name="Rata">Rata</string>
    <string name="Buey">Buey</string>
    <string name="Tigre">Tigre</string>
    <string name="Conejo">Conejo</string>
    <string name="Dragon">Dragon</string>
    <string name="Serpiente">Serpiente</string>
    <string name="Caballo">Caballo</string>
    <string name="Oveja">Oveja</string>
    <string name="abraham_ram_rez_hern_ndez" translatable="false">Abraham Ramírez Hernández</string>
    <string name="version_1">Versión 1.0</string>
    <string-array name="careers_array">
        <item>None</item>
        <item>Ingeniería Aeroespacial</item>
        <item>Ingeniería Civil</item>
        <item>Ingeniería Geomática</item>
        <item>Ingeniería Ambiental</item>
        <item>Ingenieria Geofísica</item>
        <item>Ingenieria Geológica</item>
        <item>Ingenieria Petrolera</item>
        <item>Ingenieria de Minas y Metalurgia</item>
        <item>Ingenieria en Computación</item>
        <item>Ingenieria Eléctica Electrónica</item>
        <item>Ingenieria en Telecomuniaciones</item>
        <item>Ingenieria Mecánica</item>
        <item>Ingenieria Industrial</item>
        <item>Ingenieria Mecatrónica</item>
        <item>Ingenieria en Sistemas Biomédicos</item>
    </string-array>
</resources>