<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_azul"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/labelCarrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/carrera"
            app:layout_constraintBottom_toTopOf="@+id/spinnerCarrera"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnNewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/siguiente"
            android:focusable="true"
            android:onClick="newProfile"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"
            app:srcCompat="@drawable/baseline_forward_24"
            tools:visibility="visible" />


        <EditText
            android:id="@+id/inputNombre"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="120dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@id/labelNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputApellidos"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNombre" />

        <TextView
            android:id="@+id/labelApellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="4dp"
            android:text="@string/apellidos"
            app:layout_constraintBottom_toTopOf="@+id/inputApellidos"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="216dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputApellidos"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/spinnerCarrera"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCuenta" />

        <EditText
            android:id="@+id/inputCuenta"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.443"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tvFormTitle"
            android:layout_width="164dp"
            android:layout_height="39dp"
            android:layout_marginTop="28dp"
            android:text="@string/formulario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/nombre"
            app:layout_constraintBottom_toTopOf="@+id/inputNombre"
            app:layout_constraintStart_toStartOf="parent" />

        <DatePicker
            android:id="@+id/inputFechaNacimiento"
            android:layout_width="280dp"
            android:layout_height="145dp"
            android:layout_marginTop="280dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/fecha_de_nacimiento"
            app:layout_constraintBottom_toTopOf="@+id/inputFechaNacimiento"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/labelCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/correo_electr_nico"
            app:layout_constraintBottom_toTopOf="@+id/inputEmail"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/labelCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/n_mero_de_cuenta"
            app:layout_constraintBottom_toTopOf="@+id/inputCuenta"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
